bugfix contacts scrollbar

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -375,7 +375,7 @@ h3 {
     height: 600px;
     width: 1148px;
     padding-right: 20px;
-    z-index: 10;
+    z-index: 9;
     display: flex;
     border-radius: 30px;
     overflow: hidden;
@@ -415,7 +415,7 @@ h3 {
 .succesfullyCreatedOverlayImg {
     z-index: 3;
     display: flex;
-    position: absolute;
+    position: fixed;
     right: -240px;
     top: 105px;
     transform: translateX(100px);
