--- a/styles/contactsModal.css
+++ b/styles/contactsModal.css
@@ -165,6 +165,7 @@ input::placeholder {
     padding-top: 24px;
     padding-bottom: 48px;
     padding-left: 16px;
+    z-index: 10;
 }
 
 .modalCancelButton {
